# amark

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  index.html  lefthook.yml  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  workspace_commands.rs
src-tauri/src/export/: html.rs  mod.rs  pdf.rs
src-tauri/src/models/: mod.rs  workspace_models.rs
src-tauri/src/services/: file_watch.rs  mod.rs  workspace_error.rs  workspace_scan.rs
src-tauri/windows/: hooks.nsi
src/app/: App.tsx  app-utils.ts
src/app/components/: ActivityPanel.tsx  ExternalUpdateBanner.tsx  MenuBar.tsx  SaveButton.tsx  StatusBar.tsx  TabsBar.tsx  TabsBarView.tsx  ViewModeSwitch.tsx  WindowControls.tsx  WorkspaceTreeView.tsx
src/components/ui/: button.tsx
src/features/activity/: activity-store.ts
src/features/document/: document-controller.ts  document-store.ts  document-types.ts
src/features/editor/: editor-adapter.ts  milkdown-adapter.ts  (+19 more)
src/lib/: mermaid-render.ts
src/services/: external-link.test.ts  external-link.ts  file-ref.test.ts  file-ref.ts  image-src.test.ts  image-src.ts
src/styles/: globals.css
src/themes/: base.css  theme-manager.ts  workspace.css
src/ui/: dialog.ts  keyboard-shortcuts.ts  menu-bar.ts  sidebar-resizer.ts  split-divider.ts  sync-scroll.test.ts  sync-scroll.ts  view-mode-switch.ts
(+23 files in other folders)
