[package]
name = "amark"
version = "0.1.0"
edition = "2021"

[lib]
name = "amark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync"] }
notify = "6"
dirs = "5"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Windows-only: drive WebView2's PrintToPdf for dialog-free PDF export.
# Pinned to the versions Tauri already uses so the COM types match.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }
